--- a/css/product_page.css
+++ b/css/product_page.css
@@ -107,3 +107,13 @@ table td {
   color: black;
 }
 
+.animate-text {
+  animation: fade-in 0.5s;
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
