--- a/css/product_page.css
+++ b/css/product_page.css
@@ -84,6 +84,10 @@ table td {
   cursor: pointer;
 }
 
+#speak_in_hindi:hover, #speak_in_english:hover {
+  background-color: yellow;
+}
+
 .fa {
   color: black;
   padding: 20px;
