update get in touch

--- a/css/product_page.css
+++ b/css/product_page.css
@@ -178,3 +178,9 @@ table td {
   text-decoration: none; /* Remove underline from links */
   background-color: grey;
 }
+
+a:link {
+  color: black;
+  background-color: transparent;
+  text-decoration: wavy;
+}
